# audx-realtime

./: .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  README.md  main.c
include/: arena.h  audx.h  audx_common.h  audx_denoise.h  audx_resampler.h  audx_time.h
include/audx/: audx_realtime.h  common.h  denoiser.h  logger.h  model_loader.h  resample.h
samples/: clean_test_Neighbor_3.pcm  denoised_sample_16khz.pcm  noise_test_Neighbor_3.pcm
scripts/: android.sh  build.sh  deploy-to-android.sh
src/: audx.c  audx_denoise.c  audx_resampler.c  main.c
src/audx/: audx_realtime.c  denoiser.c  model_loader.c  resample.c
tests/: CMakeLists.txt
tests/mocks/: mock_denoiser.h
tests/unit/: test_audx_realtime.c  test_denoiser.c  test_resampler.c
